# digital-mirrors-in-motion

./: .gitignore  README.md  pyproject.toml  references.bib  report.tex  setup.bat  setup.sh  visualize_clusters.ipynb
data/: pose_clusters.csv
docs/: PAPER_DATA.md  TOOL_DOCUMENTATION.md
frontend/: image.html  image.js  index.html  patterns.html  pose-utils.js  styles.css  timeline.js  video.html  video.js
scripts/: cluster_poses.py  mediapipe_pipeline.py  requirements.txt  serve.py  server.py
tool/: requirements.txt  serve.py
tool/src/: __init__.py  cluster_poses.py  export_data.py  geometry.py  mediapipe_pipeline.py  normalize.py
