[project]
name = "unveiling-digital-mirrors-further-research"
version = "0.1.0"
description = "Unveiling Digital Mirrors"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "numpy==1.24.3",
    "scipy>=1.10.0",
    "scikit-learn==1.3.0",
    "pandas>=2.0.0",
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.0"
]
